[gd_scene load_steps=2 format=3 uid="uid://cq3544uojs5l2"]

[ext_resource type="Script" uid="uid://cmow5cltgjrym" path="res://scripts/lobby.gd" id="1_6jt0u"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jt0u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1158.0
offset_bottom = 648.0
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Lobby"
horizontal_alignment = 1

[node name="RoomCodeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Room Code: -----
"
horizontal_alignment = 1

[node name="PlayerList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
auto_width = true
auto_height = true

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_pressed"]
